Update esp-hal version to 1.0.0-rc.1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ lto = "fat"
 opt-level = "s"
 
 
-[profile.release.package.esp-wifi]
+[profile.release.package.esp-radio]
 opt-level = 3
 
 [profile.dev]
@@ -20,18 +20,18 @@ debug = true
 lto = "fat"
 opt-level = "z"
 
-[profile.dev.package.esp-wifi]
+[profile.dev.package.esp-radio]
 opt-level = 3
 
 [dependencies]
-esp-hal = { version = "=1.0.0-rc.0", optional = true }
+esp-hal = { version = "=1.0.0-rc.1", optional = true }
 esp-backtrace = { version = "0.16", optional = true, features = [
     "panic-handler",
     "println",
     "exception-handler",
 ] }
 esp-println = { version = "0.14", optional = true, features = ["log-04"] }
-esp-hal-embassy = { version = "0.8", optional = true }
+esp-rtos = { version = "0.1.1", features = ["embassy"], optional = true }
 
 embassy-time = { version = "0.4.0", optional = true }
 embassy-executor = { version = "0.7", package = "embassy-executor", features = [
@@ -44,7 +44,7 @@ embassy-net = { version = "0.6.0", features = [
     "medium-ethernet",
 ], optional = true }
 
-esp-wifi = { version = "0.15.0", optional = true, features = [
+esp-radio = { version = "0.16.0", optional = true, features = [
     "sys-logs",
     "wifi",
 ] }
@@ -103,15 +103,15 @@ examples = [
     "esp-hal",
     "esp-backtrace",
     "esp-println",
-    "esp-wifi",
-    "esp-wifi/smoltcp",
+    "esp-radio",
+    "esp-radio/smoltcp",
     "smoltcp",
     "esp-alloc",
     "esp-bootloader-esp-idf",
 ]
 examples-async = [
     "examples",
-    "esp-hal-embassy",
+    "esp-rtos",
     "embassy-time",
     "embassy-executor",
     "embassy-net",
@@ -125,42 +125,42 @@ examples-std = ["critical-section/std"]
 
 esp32 = [
     "esp-hal?/esp32",
-    "esp-hal-embassy?/esp32",
+    "esp-rtos?/esp32",
     "esp-backtrace?/esp32",
     "esp-println?/esp32",
-    "esp-wifi?/esp32",
+    "esp-radio?/esp32",
     "esp-mbedtls/esp32",
 ]
 esp32c3 = [
     "esp-hal?/esp32c3",
-    "esp-hal-embassy?/esp32c3",
+    "esp-rtos?/esp32c3",
     "esp-backtrace?/esp32c3",
     "esp-println?/esp32c3",
-    "esp-wifi?/esp32c3",
+    "esp-radio?/esp32c3",
     "esp-mbedtls/esp32c3",
 ]
 esp32c6 = [
     "esp-hal?/esp32c6",
-    "esp-hal-embassy?/esp32c6",
+    "esp-rtos?/esp32c6",
     "esp-backtrace?/esp32c6",
     "esp-println?/esp32c6",
-    "esp-wifi?/esp32c6",
+    "esp-radio?/esp32c6",
     "esp-mbedtls/esp32c6",
 ]
 esp32s2 = [
     "esp-hal?/esp32s2",
-    "esp-hal-embassy?/esp32s2",
+    "esp-rtos?/esp32s2",
     "esp-backtrace?/esp32s2",
     "esp-println?/esp32s2",
-    "esp-wifi?/esp32s2",
+    "esp-radio?/esp32s2",
     "esp-mbedtls/esp32s2",
 ]
 esp32s3 = [
     "esp-hal?/esp32s3",
-    "esp-hal-embassy?/esp32s3",
+    "esp-rtos?/esp32s3",
     "esp-backtrace?/esp32s3",
     "esp-println?/esp32s3",
-    "esp-wifi?/esp32s3",
+    "esp-radio?/esp32s3",
     "esp-mbedtls/esp32s3",
 ]
 
